edit lru, add hashmap